<resources>
    <string name="app_name">Brawler</string>
    <string name="parNiveau">Par Niveau</string>
    <string name="parLocation">Par Location</string>
    <string name="seBattre">Se Battre</string>
    <string name="fairePaix">Faire la paix</string>
    <string name="nom_utilisateur">Nom Utilisateur</string>
    <string name="emplacement_actuel">Emplacement Actuel</string>
    <string name="niveau_jeu">Niveau_Jeu</string>
    <string name="modifier_les_informations">Modifier les informations</string>
    <string name="annuler">Retourner</string>
    <string name="age">Votre Âge</string>>
    <string name="distance">Distance maximale des joueurs…</string>
    <string name="ex_100">Ex:100</string>
    <string name="mofidier">Modifier</string>
    <string name="modif_description">Modifier Description</string>
    <string name="modif_description_image">Modifier Image</string>

    <!--Page Login-->
    <string name="utilisateurHint">Nom d\'utilisateur</string>
    <string name="mdpHint">Mot de passe</string>
    <string name="btnMemoire">Se souvenir de moi</string>
    <string name="btnEnter">Entrer</string>
    <string name="logoDesc">Logo Rumbler</string>
    <string name="erreurConnexion">Erreur de connexion</string>
    <string name="erreurInfoErronées">vérifiez les informations et réessayez à nouveau</string>

    <!--Page Voir Message-->
    <string name="envoyerMessage">Envoyer Message</string>
    <string name="entererMessage">Entrer votre message</string>
    <string name="aller_profil">Aller Profil</string>
    <string name="aller_discuter">Aller Discuter</string>
    <string name="aller_matcher">Aller Matcher</string>
    <string name="liste_de_contacts">"Liste de Contacts : "</string>
    <string name="createCompte">Pas de compte? Creez-en un</string>
    <string name="reply_name">Répondre</string>

    <!--Creation de compte Page-->
    <string name="emailHint">Entrez votre email</string>
    <string name="nameHint">Entrez votre Prénom</string>
    <string name="locationHint">Entrez votre ville</string>
    <string name="descriptionHint">Décrivez vous</string>

    <!--Page Recherce de Match-->
    <string name="aboutPhoto">Photo de profil de l\'utilisateur</string>
    <string name="channel_name">brawlerChannel</string>
    <string name="nom_utilisateur_notification_reply">Vous</string>
    <string name="btn_deconnecter">Déconnecter</string>
    <string name="accepter">Accepter</string>
    <string name="refuser">Refuser</string>
    <string name="allet_partie">Aller Partie</string>
    <string name="vosDemandeDePArtie">Vos demandes de parties:</string>
    <string name="demandePartie">Demande de partie</string>
    <string name="partieEnCour">Parties en cours</string>
    <string name="accederPartie">Acceder partie</string>
    <string name="vosPartieEnCour">Vos parties en cours:</string>
    <string name="boutton_choisir_arme">Choisir Votre Main</string>
    <string name="r_sultat">Résultat :</string>
    <string name="votre_adversaire_avait_jou"><![CDATA[<- Votre adversaire avait joué]]></string>
    <string name="votre_mouvement_dernier_tour"><![CDATA[Votre main le dernier tour ->]]></string>
    <string name="Demander_Partie">Lancer Partie</string>

</resources>
