<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/menu_profil"
    android:title="@string/aller_profil"
    android:icon="@drawable/ic_aller_profil"
    app:showAsAction="always"
    />
    <item
        android:id="@+id/menu_contact"
        android:title="@string/aller_discuter"
        android:icon="@drawable/ic_baseline_people_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_match"
        android:title="@string/aller_matcher"
        android:icon="@drawable/ic_baseline_tag_faces_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_partie"
        android:title="@string/allet_partie"
        android:icon="@drawable/ic_fist"
        app:showAsAction="always"
        />

</menu>