<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingTop="55dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDemandePartie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/demandePartie" />

        <Button
            android:id="@+id/btnPartienEnCour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/partieEnCour"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtTypePartie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vosDemandeDePArtie"
        android:textColor="#000000"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPartie"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>