<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activité.MainActivity">

    <TextView
        android:justificationMode="inter_word"
        android:id="@+id/Nom"
        android:layout_width="185dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="315dp"
        android:layout_marginRight="315dp"
        android:layout_marginBottom="653dp"
        android:fontFamily="@font/source_code_pro_semibold"
        android:text="@string/nom_utilisateur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="313dp"
        android:layout_marginRight="313dp"
        android:layout_marginBottom="590dp"
        android:fontFamily="@font/source_code_pro_semibold"
        android:justificationMode="inter_word"
        android:text="@string/emplacement_actuel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nom"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:justificationMode="inter_word"
        android:id="@+id/Niveau"
        android:layout_width="173dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="516dp"
        android:fontFamily="@font/source_code_pro_semibold"
        android:text="@string/niveau_jeu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Location"
        app:layout_constraintVertical_bias="0.083" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="573dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <Button
        android:id="@+id/ModifierProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="684dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="@string/modifier_les_informations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>